<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱玩</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entrance">EntranceActivity</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create">创建活动</string>
    <string name="title_activity_list_tags">选择要关注的标签</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_item_timeline">主页</string>
    <string name="drawer_item_jointed">已关注</string>
    <string name="drawer_item_postnew">创建</string>
    <string name="drawer_item_changetags">订阅关注</string>
    <string name="drawer_item_setting">设置</string>

    <string name="event_post">发布</string>
    
    <string name="login_et_account">请输入帐号</string>
    <string name="login_et_password">请输入密码</string>
    <string name="login_btn_login">登  录</string>
    <string name="login_failure"> 帐号或密码错误，请重新输入</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="viewpager_item_info">个人信息</string>
    <string name="viewpager_item_post">发布的活动</string>
    <string name="viewpager_item_join">参加的活动</string>

    <string name="preference_category_user">用户</string>
    <string name="preference_category_common">常规</string>
    <string name="preference_category_more">更多</string>
    <string name="preference_login">未登陆</string>
    <string name="preference_interest">选择关注</string>
    <string name="preference_about">关于</string>

    <string name="task_sending">发送中</string>
    <string name="task_sending_pic">发送照片</string>
    <string name="task_send_cancel">取消</string>
    <string name="task_success">发送成功</string>
    <string name="task_waiting">等待中</string>

    <string name="details_tag_activity">详情</string>
    <string name="details_tag_location">地点:</string>
    <string name="details_tag_starttime">地点:</string>
    <string name="details_tag_author">组织者信息</string>
    <string name="details_tag_author_nick">社团</string>
    <string name="details_tag_email">邮箱</string>
    <string name="details_tag_phone">手机</string>
    <string name="title_activity_comments">CommentsActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
