<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@color/dark_gray"
    android:dividerPadding="5dp"
    android:showDividers="middle"
    android:background="@color/dark_gray">

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/srl_details_refresh">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdge="none"
                android:background="@color/white"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:id="@+id/iv_details_poster_view"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="周末去打球"
                            android:id="@+id/tv_details_title"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="20dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="20人收藏/10人报名"
                            android:id="@+id/tv_details_people"
                            android:textColor="@color/blue"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_details_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:text="我是简介我是简介我是简介我是简介请不要看我我是简介我是简介请不要问我我真的是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">
                        <ImageView
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/details_tag_shape"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/blue"
                            android:text="@string/details_tag_activity"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:background="@color/white">
                        <TextView
                            android:text="@string/details_tag_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="location"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_details_place_at"
                            android:textColor="@color/gray"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:background="@color/white">
                        <TextView
                            android:text="@string/details_tag_starttime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2015-5-28"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_details_start_at"
                            android:textColor="@color/gray"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">
                        <ImageView
                            android:layout_width="5dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/details_tag_shape"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/blue"
                            android:text="@string/details_tag_author"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:background="@color/white">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:background="@color/white">
                            <TextView
                                android:text="@string/details_tag_author_nick"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="center_vertical"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="周末全会"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:layout_gravity="center_vertical"
                                android:id="@+id/tv_details_author_nick"
                                android:textColor="@color/gray"
                                android:layout_marginLeft="10dp"/>
                        </LinearLayout>
                        <TextView
                            android:text="@string/details_tag_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="123138699@qq.com"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_details_email"
                            android:textColor="@color/gray"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:background="@color/white">
                        <TextView
                            android:text="@string/details_tag_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="18911591465"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_details_phone"
                            android:textColor="@color/gray"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:background="@color/white">
                        <TextView
                            android:text="结束时间："
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="end_time"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_details_end_at"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:id="@+id/bt_details_join"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ToggleButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:id="@+id/tb_details_like"
                android:background="@drawable/details_button_like"
                android:textOff=""
                android:textOn=""/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>